--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,5 @@
 - 0.6
-  Added Regex Validators
+  Added Regex, IP Validators
 
 - 0.5
   Added Numeric, Email, LessThan, LessThanOrEqual, GreaterThan, GreaterThanOrEqual Validators
