Added latests changes

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,6 @@
 - 0.7
-  Custome Exception: ValidateError
+  Custom Exception: ValidateError
+  Coverall
 
 - 0.6
   Added Regex, IP, URL, Locale, County and Timezone Validators
