IBAN and Currency Validators

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+- 0.8
+  Finanital Validations: Currency, IBAN, CreditCard
+  allow_null now is a Validator property
+
 - 0.7
   Custom Exception: ValidateError
   Coverall
