--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,8 @@
+- 1.1.2
+  Fix some invalid exception messages
+
 - 1.1.1
   Allow variables on the custom messages
-
 
 - 1.1
   Allow custom messages
